<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signUp.SignUpFragmentCode">

    <FrameLayout
        android:id="@+id/frm_sign"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:background="@color/second_yellow"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="@id/frm_sign">

        <TextView
            android:id="@+id/txv_signup_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/secondary_black"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="88dp"
        android:layout_height="2dp"
        android:background="@color/secondary_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frm_sign"
       android:layout_marginStart="60dp"
        />
    <TextView
        android:id="@+id/txv_whats_your_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/frm_sign"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/secondary_black"
        android:text="@string/what_s_the_code"

        />
    <TextView
        android:id="@+id/txv_we_will_send_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txv_whats_your_number"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:text="Enter the code send to"
        />
    <TextView
        android:id="@+id/txv_phone_num_in_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@id/txv_we_will_send_code"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txv_whats_your_number"
        android:textSize="14sp"
        android:textColor="@color/secondary_black"
        android:text="+998 99-868-38-88"
        />
 <!--   <LinearLayout
        android:id="@+id/lnl_entercode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/txv_we_will_send_code"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="36dp"
        android:weightSum="5"
        >
        <EditText
            android:id="@+id/edt_code1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:maxLength="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_black"
            android:background="@color/gray_w"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />
        <EditText
            android:id="@+id/edt_code2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:maxLength="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_black"
            android:background="@color/gray_w"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />
        <EditText
            android:id="@+id/edt_code3"

            android:layout_width="48dp"
            android:layout_height="48dp"
            android:maxLength="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_black"
            android:background="@color/gray_w"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />
        <EditText
            android:id="@+id/edt_code4"

            android:layout_width="48dp"
            android:layout_height="48dp"
            android:maxLength="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_black"
            android:background="@color/gray_w"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />
        <EditText
            android:id="@+id/edt_code5"

            android:layout_width="48dp"
            android:layout_height="48dp"
            android:maxLength="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_black"
            android:background="@color/gray_w"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />
 <EditText
            android:id="@+id/edt_code6"

            android:layout_width="48dp"
            android:layout_height="48dp"
            android:maxLength="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_black"
            android:background="@color/gray_w"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionDone"
             android:importantForAutofill="no"
            />

    </LinearLayout>-->
<EditText
    android:id="@+id/lnl_entercode"
    android:layout_marginTop="36dp"
    app:layout_constraintTop_toBottomOf="@id/txv_we_will_send_code"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:maxLength="6"
    android:padding="4dp"
    android:inputType="number"
    />
    <TextView
        android:id="@+id/txv_resendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resend code"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnl_entercode"
        android:layout_marginTop="40dp"
        />
 <TextView
        android:id="@+id/txv_ask_resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You can ask to resend code after"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txv_resendCode"
        android:layout_marginTop="10dp"
        />
<TextView
        android:id="@+id/txv_timeto_resent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="01:48"
        android:layout_marginStart="8dp"
        android:textColor="@color/secondary_black"
        app:layout_constraintStart_toEndOf="@id/txv_ask_resend_code"
        app:layout_constraintTop_toBottomOf="@id/txv_resendCode"
        android:layout_marginTop="10dp"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="6dp"
        android:backgroundTint="@color/main"
        />

</androidx.constraintlayout.widget.ConstraintLayout>